# wincompatlib

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: dxvk.rs  lib.rs  test.rs  winetricks.rs
src/tests/: dxvk.rs  fonts.rs  mod.rs  proton.rs  wine.rs
src/wine/: boot_ext.rs  mod.rs  run_ext.rs  shared_libraries.rs  with_ext.rs
src/wine/bundle/: mod.rs
src/wine/bundle/proton/: mod.rs  run_in_prefix_ext.rs  wait_for_exit_and_run_ext.rs
src/wine/ext/: boot.rs  boot_ext.rs  fonts.rs  mod.rs  overrides.rs  overrides_ext.rs  run.rs  run_ext.rs  with.rs  with_ext.rs
