[package]
name = "wincompatlib"
version = "0.7.0"
description = "Set of interfaces to run windows applications on unix-like systems using Wine"
authors = ["Nikita Podvirnyy <suimin.tu.mu.ga.mi@gmail.com>"]
license = "MIT"
edition = "2021"

[dev-dependencies]
serial_test = "2.0.0"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }

# Needed by features which require downloading stuff
# For now it's wine-fonts only
minreq = { version = "2.8.1", features = ["https-rustls", "https-rustls-probe"], optional = true }

[features]
dxvk = []

wine-bundles = []
wine-proton = ["wine-bundles"]

wine-fonts = ["dep:minreq"]
winetricks = []

all = ["dxvk", "wine-bundles", "wine-proton", "wine-fonts", "winetricks"]

# Used for test purposes
# default = ["all"]
