[package]
name = "wincompatlib"
version = "0.7.7"
description = "Set of interfaces to run windows applications on unix-like systems using Wine"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
license = "MIT"
edition = "2021"

[dev-dependencies]
serial_test = "3.2"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
serde = { version = "1.0", features = ["derive"] }

# Needed by features which require downloading stuff
# For now it's wine-fonts only
minreq = { version = "2.13", features = ["https-rustls", "https-rustls-probe"], optional = true }
blake3 = { version = "1.8", optional = true }

[features]
dxvk = []

wine-bundles = []
wine-proton = ["wine-bundles"]

wine-fonts = ["dep:minreq", "dep:blake3"]
winetricks = []

all = ["dxvk", "wine-bundles", "wine-proton", "wine-fonts", "winetricks"]

default = ["all"]
